# frappe_backend

./: INSTALL.md  compose.yaml  example.env  first-setup.sh
apps/custom_apps/: .pre-commit-config.yaml  README.md  modules.txt  pyproject.toml
apps/custom_apps/custom_apps/: hooks.py  modules.txt
apps/custom_apps/custom_apps/fixtures/: item_group.json
apps/custom_apps/custom_apps/setup/: install.py
scripts/: setup.ps1  setup.sh
