[project]
name = "custom_apps"
authors = [
    { name = "Custom Apps", email = "admin@example.com" }
]
description = "Custom app to seed ERPNext Item Groups"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
